# Cop-Chatbot

./: README.md  docker-compose.yaml
Frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
Frontend/public/: default.conf
Frontend/src/: App.tsx
Frontend/src/components/: Chatbot-new.css  Chatbot-new.tsx  Chatbot.css  Chatbot.tsx  CommissionerMessage.tsx  Constant.tsx  Header.tsx  Helplines.tsx
Frontend/src/pages/: Admin.tsx  Index.tsx
backend/: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  routes.py
