[project]
name = "cop-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.26",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "numpy>=2.2.6",
    "psycopg2-binary>=2.9.10",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
]