[project]
name = "cop-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "flask",
    "flask-cors",
    "numpy",
    "psycopg2-binary",
    "python-dotenv",
    "pypdf2",
    "python-docx",
    "pyjwt",
]
